# ConvStencil

./: CMakeLists.txt
src/1d/: gpu_1r.cu  gpu_2r.cu  main.cu
src/2d/: 2d_utils.h  gpu.cu  gpu_2d_7r_float.cu  main.cu  main_float.cu
src/3d/: gpu_box.cu  gpu_star.cu  main.cu
src/cudnn/: conv_1d3p.cu  conv_1d5p.cu  conv_box2d25p.cu  conv_box2d49p.cu  conv_box2d49p_float.cu  conv_box2d49p_half.cu  conv_box2d9p.cu  conv_box2d9p_float.cu  conv_box3d27p.cu  conv_box3d27p_float.cu
